исправлены лр 2,3, 4 - сделана

--- a/ЛР3/стандарт.md
+++ b/ЛР3/стандарт.md
@@ -1,3 +1,155 @@
-# Стандарт управления IT услугой "Персональный подбор треков" для музыкального веб сервиса MuzMay
+# Стандарт управления IT услугой "Персональный подбор треков" для музыкального веб-сервиса MuzMay
 ---
 ## Стандарты управления 
+
+На данный момент существует несколько стандартов управления IT услугами, рассмотрим несколько из них
+
+### ITIL v4
+**Основные принципы:**
+- Сосредоточение на ценности
+- Старт с последней точки остановки
+- Движение вперед итеративно и с обратной связью
+- Сотрудничество, повышение прозрачности и наглядности
+- Комплексная работа и рефлексия
+- Практичность, лаконичность действий
+- Оптимизация и автоматизация 
+
+**Основные практики (до 2019 - процессы):**
+- Управление запросами. Обеспечивает эффективное взаимодействие между пользователями и центром обслуживания.
+-  Управление инцидентами. Помогает быстро восстановить работу IТ-сервисов в случае возникновения ошибок и
+инцидентов.
+- Управление проблемами. Позволяет исследовать и устранять корневые причины проблем, которые могут вызывать
+инциденты.
+- Управление изменениями. Оценивает и контролирует изменения, происходящие в IТ-среде. 
+- Управление конфигурациями и активами. Обеспечивает точную и актуальную информацию о состоянии
+инфраструктуры.
+- Управление уровнем сервиса. Обеспечивает надежность и качество IТ-услуг.
+- Управление доступом. Позволяет сохранить в безопасности конфиденциальные данные.
+- Управление релизами. Минимизирует риски при обновлениях.
+
+### COBIT 
+
+в отличии от ITIL COBIT фокусируется больше на описании взаимодействия руководства - специалистов, а не на описании процессов, т.к. зачастую руководство не понимает технические термины, которыми оперируют специалисты, а специалисты не понимают бизнес-терминов, на основе которых руководство принимает решения.
+
+Выделяются базовые процессы деятельности ИТ-компании или
+IT-департамента (COBIT):
+
+
+**Стандарт COBIT структурирован на основе 5 основных доменов:**
+- Планирование и Организация — стратегии и тактики для достижения согласованности целей.
+- Приобретение и Внедрение — процессы принятия и внедрения IT-решений.
+- Обеспечение и Поддержка — предоставление качественного обслуживания и поддержка ИТ-сервисов.
+- Мониторинг и Оценка — регулярная оценка результатов для обеспечения эффективного управления.
+
+COBIT также включает в себя инструменты для оценки зрелости процессов и показатели ключевых результатов, позволяющие контролировать и оценивать ход IT-действий.
+
+### ISO 20000 (ГОСТ)
+ISO/IEC 20000-1:2018 — это международный стандарт системы управления ИТ-услугами (SMS — Service Management System). Он определяет требования к организации, которая оказывает ИТ-услуги, и хочет продемонстрировать, что управляет ими эффективно.
+
+**Основные положения ISO/IEC 20000:**
+- Область применения — определяет, какие услуги покрываются SMS.
+- Контекст организации — понимание потребностей и ожиданий заинтересованных сторон.
+- Лидерство — роли, ответственности, вовлечённость руководства.
+- Планирование — риски, возможности, цели.
+- Поддержка — ресурсы, знания, документация.
+- Операционная деятельность — управление поставкой и контролем ИТ-услуг.
+- Оценка эффективности — аудит, контроль, анализ.
+- Улучшение — корректирующие действия, постоянное улучшение.
+---
+## Описание стандарта управления IT услугой
+
+
+### 1. Описание ИТ-услуги
+**Название услуги**: Музыкальный веб-сервис (веб-приложение для потокового воспроизведения и персональных рекомендаций треков)
+
+**Ключевая функция**: Обеспечение пользователям персонализированного музыкального опыта с помощью рекомендательной системы.
+
+**Клиенты/пользователи**:
+- Конечные пользователи (слушатели)
+- Музыкальные агрегаторы
+- Контент-менеджеры
+
+---
+
+### 2. Контекст организации (ISO 4.1–4.3)
+**Заинтересованные стороны**:
+- Внутренние: владелец продукта, команда разработки, служба поддержки
+- Внешние: пользователи, партнёрские платформы, API-клиенты
+
+**Область применения системы управления услугой (SMS)**:
+- Рекомендательная система
+- API-платформа
+- Хостинг и инфраструктура
+- Пользовательский интерфейс (веб/мобильный)
+
+---
+
+### 3. Лидерство и управление (ISO 5.1–5.3)
+**Роли и ответственности**:
+- Service Owner – отвечает за качество предоставления услуги
+- Product Owner – приоритизация функций и развития
+- IT Operations – эксплуатация и мониторинг
+- Service Desk – обработка обращений пользователей
+
+**Политика управления ИТ-услугами**:
+- Обеспечить стабильную работу сервиса 24/7
+- Обеспечить качество рекомендаций с точностью >85%
+- Поддержка пользователей в течение 12 часов по рабочим дням
+
+---
+
+### 4. Планирование и оценка рисков (ISO 6.1–6.2)
+**Примеры рисков**:
+- Недоступность модели рекомендаций (ML-сервер)
+- Перегрузка API или потери аудиопотока
+- Нарушение SLA с хостинг-провайдером
+
+**План реагирования**:
+- Резервные модели / fallback логика
+- Горизонтальное масштабирование
+- Мониторинг и оповещения через Grafana + Prometheus
+
+---
+
+### 5. Поддержка и ресурсы (ISO 7.1–7.5)
+**ИТ-ресурсы**:
+- ML-инфраструктура (GPU-сервер)
+- Аудио-CDN
+- Пользовательская база в PostgreSQL
+
+**Документация**:
+- Runbook для инцидентов
+- База знаний (Confluence)
+- Конфигурации в Git
+
+---
+
+### 6. Операционные процессы (в рамках ITIL, ISO 8.1)
+| Процесс (в рамках ITIL)       | Цель                                    |
+|-------------------------------|------------------------------------------|
+| Управление инцидентами        | Восстановление после сбоев              |
+| Управление изменениями        | Контроль релизов                         |
+| Управление релизами           | Плавный деплой новых функций            | 
+| Управление конфигурациями     | Учёт компонентов (CMDB)                 |
+| Управление уровнем услуг      | Определение SLA, контроль метрик        | 
+| Улучшение услуг               | Поиск точек роста, снижение издержек    |
+
+---
+
+### 7. Оценка эффективности и улучшение (ISO 9–10)
+**Метрики**:
+- Время отклика API < 250 мс
+- Аптайм сервиса > 99.5%
+- Точность рекомендаций (по user feedback) > 85%
+
+**Аудит**:
+- Внутренний аудит каждый квартал
+- Анализ инцидентов
+- Улучшения оформляются в виде RFC (Request for Change)
+
+---
+
+### 8. Вывод: Соответствие ISO и применение ITIL
+- ISO задаёт структуру и требуемую документацию (контекст, аудит, политика)
+- ITIL обеспечивает наполнение: конкретные процессы, роли и практики
+- Вместе они формируют зрелую и надёжную систему управления услугой
