--- a/ЛР9/Реестр Рисков.md
+++ b/ЛР9/Реестр Рисков.md
@@ -30,3 +30,6 @@
 
 ---
 
+## Роза рисков
+
+![Роза рисков](https://github.com/GuliGuli228/KIS/blob/61eb3c06fc238985170518ef0f4e81160a2b772c/%D0%9B%D0%A09/Images/image.png)
