Добавлен реест рисков в формате png

--- a/ЛР9/Реестр Рисков.md
+++ b/ЛР9/Реестр Рисков.md
@@ -14,22 +14,10 @@
 ---
 ## Реестр рисков для ZR Group
 
-
-
-| № | Категория         | Риск                                                                                             | Возможные последствия                                                                                                     | Ущерб    | Вероятность | Уровень риска | Мероприятия по снижению риска                                                                                     | Владелец риска         |
-|---|-------------------|--------------------------------------------------------------------------------------------------|----------------------------------------------------------------------------------------------------------------------------|----------|--------------|----------------|---------------------------------------------------------------------------------------------------------------------|-------------------------|
-| 1 | Технологические    | Отсутствие IT-инфраструктуры для запуска ERP и MES                                               | Блокировка запуска автоматизации, необходимость экстренных закупок                                                        | Высокий  | Высокая      | Критический     | Пошаговое развитие инфраструктуры, поэтапное развертывание серверов, бюджетный план на оборудование                | Технический директор    |
-| 2 | Производственные   | Ошибки в параметрах выдержки и температуры при производстве премиум алкоголя                     | Потеря партии, отклонения от рецептуры, невозможность выхода на международные стандарты                                  | Высокий  |  Средняя      | Высокий         | Внедрение MES и QMS с фокусом на температурном и временном контроле, исключение ручных операций                     | Руководитель производства |
-| 3 | Организационные    | Недостаточная квалификация персонала при переходе на ERP и цифровые процессы                     | Ошибки ввода, сопротивление изменениям, неэффективное использование системы                                               |  Средний  | Высокая      | Высокий         | Обязательная программа переобучения, наставничество, отказ от Excel вне ERP                                         | HR-директор             |
-| 4 | Финансовые         | Рост стоимости ERP и сопутствующего ПО при переходе к масштабируемому решению                    | Превышение бюджета, сдвиг сроков, снижение ROI                                                                           |  Средний  |  Средняя      |  Средний         | Поэтапное внедрение, фиксация контрактов с вендором, гибкая модель подписки через интегратора                       | Финансовый директор     |
-| 5 | Юридические        | Нарушение законодательства при работе с ЭДО и лицензиями    | Штрафы, приостановка деятельности, отказ от импортно-экспортных операций                                                  | Высокий  |  Средняя      | Высокий         | Использование сертифицированных решений (DMS), правовая экспертиза, аудиты соответствия                            | Юрист                   |
-| 6 | Человеческий фактор| Перегрузка ключевых специалистов на этапе внедрения и поддержки                                  | Сбои в внедрении, откладывание важных задач, рост числа ошибок                                                           |  Средний  | Высокая      | Высокий         | Распределение нагрузки, временный найм специалистов, реалистичное планирование фаз внедрения                         | Руководитель проекта    |
-| 7 | Логистические      | Нестабильность в цепочке поставок сырья и упаковки при масштабировании                          | Остановка производства, рост издержек, нарушение графика отгрузки                                                        | Средний  | Средняя      |  Средний         | Внедрение SCM и TMS, прогнозирование спроса, заключение долгосрочных договоров                                       | Коммерческий директор   |                |
-| 8 | Стратегические     | Задержка внедрения ключевых модулей (MES, WMS, PLM) из-за длительной настройки и локализации    | Отставание от плана автоматизации, невозможность снизить себестоимость к нужному сроку                                   | Средний  |  Средняя      |  Средний         | Старт с MVP функционала, адаптация под российский рынок, параллельная настройка и обучение                           | Руководитель автоматизации |
-|9 | Информационные     | Утечка данных при переходе на облачные решения без должной настройки доступа и защиты            | Репутационный ущерб, административная ответственность, блокировка каналов ЭДО                                             | Высокий  |  Средняя      | Высокий         | Шифрование, контроль доступа, двухфакторная аутентификация, контракт с надёжным облачным провайдером                | Специалист по ИБ        |
+![alt- реестр рисков](https://github.com/GuliGuli228/KIS/blob/main/%D0%9B%D0%A09/Images/image1.png)
 
 ---
 
 ## Роза рисков
 
-![Роза рисков](https://github.com/GuliGuli228/KIS/blob/61eb3c06fc238985170518ef0f4e81160a2b772c/%D0%9B%D0%A09/Images/image.png)
+![alt-Роза рисков](https://github.com/GuliGuli228/KIS/blob/61eb3c06fc238985170518ef0f4e81160a2b772c/%D0%9B%D0%A09/Images/image.png)
