ЛР 3 переделана, лр 7 доделана

--- a/ЛР3/стандарт.md
+++ b/ЛР3/стандарт.md
@@ -1,5 +1,4 @@
-# Стандарт управления IT услугой "Персональный подбор треков" для музыкального веб-сервиса MuzMay
----
+# Стандарт управления IT процессами в рамках предприятия ZR Group
 ## Стандарты управления 
 
 На данный момент существует несколько стандартов управления IT услугами, рассмотрим несколько из них
@@ -56,31 +55,34 @@ ISO/IEC 20000-1:2018 — это международный стандарт си
 - Оценка эффективности — аудит, контроль, анализ.
 - Улучшение — корректирующие действия, постоянное улучшение.
 ---
-## Описание стандарта управления IT услугой
+## Описание стандарта управления IT процессов
 
 
-### 1. Описание ИТ-услуги
-**Название услуги**: Музыкальный веб-сервис (веб-приложение для потокового воспроизведения и персональных рекомендаций треков)
+### 1. Описание ИТ-процессов
+**Название процессов**: Управление инцидентами, управление изменениями, информационная безопасность, контроль и соответствие 
 
-**Ключевая функция**: Обеспечение пользователям персонализированного музыкального опыта с помощью рекомендательной системы.
+**Ключевая функция** 
+- **Управление инцидентами:** управление рисками и их минимизация
+- **Управление изменениями:** контроль изменений, предотвращение сбоев
+- **Информационная безопасность:** защита корпоративной информации
+- **Контроль и соответствие :** контроль над IT ресурсами
 
 **Клиенты/пользователи**:
-- Конечные пользователи (слушатели)
-- Музыкальные агрегаторы
-- Контент-менеджеры
-
+- Администраторы серверов
+- Руководители IT отделов
+- Руководители отделов внутренних и внешних бизнес процессов
 ---
 
 ### 2. Контекст организации (ISO 4.1–4.3)
 **Заинтересованные стороны**:
-- Внутренние: владелец продукта, команда разработки, служба поддержки
-- Внешние: пользователи, партнёрские платформы, API-клиенты
+- Внутренние: владелец предприятия, команда разработки, служба поддержки
+- Внешние: Компания не предоставляет IT услуги сторонним пользователям
 
 **Область применения системы управления услугой (SMS)**:
-- Рекомендательная система
+- ERP система
 - API-платформа
-- Хостинг и инфраструктура
-- Пользовательский интерфейс (веб/мобильный)
+- Инфраструктура
+- Пользовательский интерфейс (Планшеты)
 
 ---
 
@@ -93,63 +95,44 @@ ISO/IEC 20000-1:2018 — это международный стандарт си
 
 **Политика управления ИТ-услугами**:
 - Обеспечить стабильную работу сервиса 24/7
-- Обеспечить качество рекомендаций с точностью >85%
+- Обеспечить своевременное обновление данных
 - Поддержка пользователей в течение 12 часов по рабочим дням
 
 ---
 
 ### 4. Планирование и оценка рисков (ISO 6.1–6.2)
 **Примеры рисков**:
-- Недоступность модели рекомендаций (ML-сервер)
-- Перегрузка API или потери аудиопотока
-- Нарушение SLA с хостинг-провайдером
+- Недоступность интернет соединения
+- Некомпетентность сотрудников 
+- Повреждение технического оборудования 
 
-**План реагирования**:
-- Резервные модели / fallback логика
-- Горизонтальное масштабирование
-- Мониторинг и оповещения через Grafana + Prometheus
+**Мероприятия для минимизации рисков**:
+- внутрення беспроводная сеть, не привязанная к глобальной
+- Служба поддержка, справочная информация на устройствах взаимодействия 
+- Резервный бюджет, запасное техническое оборудование, регулярное обслуживание 
 
 ---
 
 ### 5. Поддержка и ресурсы (ISO 7.1–7.5)
 **ИТ-ресурсы**:
-- ML-инфраструктура (GPU-сервер)
-- Аудио-CDN
-- Пользовательская база в PostgreSQL
+- База данных
+- Резервные копии
 
 **Документация**:
-- Runbook для инцидентов
-- База знаний (Confluence)
-- Конфигурации в Git
+- База данных для инцидентов
+- База знаний 
 
 ---
 
-### 6. Операционные процессы (в рамках ITIL, ISO 8.1)
-| Процесс (в рамках ITIL)       | Цель                                    |
-|-------------------------------|------------------------------------------|
-| Управление инцидентами        | Восстановление после сбоев              |
-| Управление изменениями        | Контроль релизов                         |
-| Управление релизами           | Плавный деплой новых функций            | 
-| Управление конфигурациями     | Учёт компонентов (CMDB)                 |
-| Управление уровнем услуг      | Определение SLA, контроль метрик        | 
-| Улучшение услуг               | Поиск точек роста, снижение издержек    |
-
----
-
-### 7. Оценка эффективности и улучшение (ISO 9–10)
+### 6. Оценка эффективности и улучшение (ISO 9–10)
 **Метрики**:
-- Время отклика API < 250 мс
+- Время отклика < 250 мс
 - Аптайм сервиса > 99.5%
-- Точность рекомендаций (по user feedback) > 85%
+- Удовлетворение пользователей > 85%
 
 **Аудит**:
 - Внутренний аудит каждый квартал
 - Анализ инцидентов
 - Улучшения оформляются в виде RFC (Request for Change)
 
----
 
-### 8. Вывод: Соответствие ISO и применение ITIL
-- ISO задаёт структуру и требуемую документацию (контекст, аудит, политика)
-- ITIL обеспечивает наполнение: конкретные процессы, роли и практики
-- Вместе они формируют зрелую и надёжную систему управления услугой
